# physical2logical

./: CHANGELOG.md  README.md  pyproject.toml  release.event  report.html  setup.cfg  setup.py
.github/workflows/: manual-release.yml  publish-to-test-pypi.yml  release-on-test.yml  release.yml
draganfill/: setup.py
draganfill/physical2logical/: __init__.py  aligner.py  commons.py  config.py  main.py  process_files.py  renamer.py  result.html  tokenize_values.py
physical2logical/: __init__.py  __main__.py  aligner.py  analyze.py  arguments.py  cli.py  commons.py  config.py  logger.py  process_files.py  renamer.py  replacer.py
templates/: pyproject.toml
tests/some/dir/: two.scss
