[project]
name = "physical2logical"
version = "1.0.2"
authors = [
  { name="Dragan Filipovic", email="info@frontenddot.com" },
  { name="Yuri Astrakhan", email="yuriastrakhan@gmail.com" }
]
description = "Convert CSS physical properties to logical"
readme = "README.md"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]